--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
-    <title>La Ruota - V34 (Shortcuts Ripristinati)</title>
+    <title>La Ruota - V35 (Accessibilità Fix)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
@@ -14,7 +14,11 @@
         }
         *:focus { outline: 4px solid #ffd700 !important; outline-offset: 4px; box-shadow: 0 0 15px #ffd700; }
 
-        h1 { font-size: 1px; color: #000; opacity: 0; margin: 0; height: 1px; overflow: hidden; } 
+        /* FIX ACCESSIBILITÀ H1: Ora visibile agli screen reader */
+        h1 { 
+            position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; 
+            overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border: 0; 
+        }
 
         .container { max-width: 1000px; margin: 0 auto; padding-bottom: 50px; }
 
@@ -123,7 +127,8 @@
 
         <div id="active-game-interface">
             <div class="status-bar" role="region" aria-label="Stato">
-                <h2 id="live-category" tabindex="0">CARICAMENTO...</h2>
+                <h2 id="live-category" tabindex="0" aria-live="polite">CARICAMENTO...</h2>
+                
                 <div id="turn-indicator" style="font-size:1.5em; color:#fff;">In attesa...</div>
                 <div id="my-score" style="font-size:1.2em; color:#ffd700; margin-top:10px;">Tu: €0 | Jolly: 0</div>
             </div>
