--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
         }
         *:focus { outline: 4px solid #ffd700 !important; outline-offset: 4px; box-shadow: 0 0 15px #ffd700; }
 
-        /* FIX ACCESSIBILITÀ H1: Visibile agli screen reader */
-        h1 { 
-            position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; 
-            overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border: 0; 
+        /* TITOLO PRINCIPALE VISIBILE */
+        h1 {
+            font-size: 2.5em;
+            text-align: center;
+            margin: 10px 0 10px 0;
+            color: #ffd700;
         }
 
         .container { max-width: 1000px; margin: 0 auto; padding-bottom: 50px; }
